kubernetes/apps/default/memos/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "memos.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: memos
          port: 5230
